# dirichlet-problem

./: .clang-format  .gitignore  CMakeLists.txt  readme.md  run.sh
include/: mpidirichlet.h  network.h  openmpblockdirichlet.h  openmpdirichlet.h  openmpwavedirichlet.h  sequentialdirichlet.h
scripts/: visualizer.py
src/: main.cpp  mpidirichlet.cpp  network.cpp  openmpblockdirichlet.cpp  openmpdirichlet.cpp  openmpwavedirichlet.cpp  sequentialdirichlet.cpp
